--- a/package.json
+++ b/package.json
@@ -38,12 +38,14 @@
         "cordova-plugin-whitelist": "^1.3.3",
         "ionic-angular": "3.9.2",
         "ionicons": "3.0.0",
+        "pdfjs-dist": "^2.0.489",
         "rxjs": "5.5.11",
         "sw-toolbox": "3.6.0",
         "zone.js": "0.8.26"
     },
     "devDependencies": {
         "@ionic/app-scripts": "3.1.11",
+        "@types/pdfjs-dist": "^0.1.2",
         "typescript": "~2.6.2"
     },
     "description": "An Ionic project",
