--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "lint": "ionic-app-scripts lint"
     },
     "dependencies": {
-        "@angular/animations": "5.2.11",
+        "@angular/animations": "^5.2.11",
         "@angular/common": "5.2.11",
         "@angular/compiler": "5.2.11",
         "@angular/compiler-cli": "5.2.11",
@@ -37,6 +37,7 @@
         "cordova-plugin-splashscreen": "^5.0.2",
         "cordova-plugin-whitelist": "^1.3.3",
         "ionic-angular": "3.9.2",
+        "ionic-img-viewer": "^2.9.0",
         "ionicons": "3.0.0",
         "pdfjs-dist": "^2.0.489",
         "rxjs": "5.5.11",
